<resources>
    <string name="app_name">RecipesApp</string>
    <string name="categories">категории</string>
    <string name="favorites">избранное</string>
    <string name="categoriesContentDescription">Обложка раздела Категории</string>
    <string name="categoryCardDescription">Обложка категории</string>
    <string name="RecipesCategoryCover">Обложка категории рецептов</string>
    <string name="recipeImage">Изображение рецепта</string>
    <string name="recipeName">Название рецепта</string>
    <string name="recipeCover">Обложка рецепта</string>
    <string name="favoritesButton">Кнопка Избранное</string>
    <string name="Ingredients">ингредиенты</string>
    <string name="cookingMethod">способ приготовления</string>
    <string name="servings">Порции:</string>
    <string name="recipePageName">Название рецепта</string>
    <string name="cookingSteps">Описание этапов приготовления блюда</string>
    <string name="cooking_step_format">%1$d. %2$s</string>
    <string name="_1">1</string>
    <string name="favoritesCover">Обложка раздела Избранное</string>
    <string name="favoritesHeader">избранное</string>
    <string name="favoritesListIsEmpty">Вы еще не добавили ни одного рецепта в избранное</string>
</resources>