<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground_color"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_224dp">

            <ImageView
                android:id="@+id/ivRecipeCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/recipeCover"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favoritesButton"
                android:src="@drawable/ic_heart"
                app:layout_constraintEnd_toEndOf="@+id/ivRecipeCover"
                app:layout_constraintTop_toTopOf="@+id/ivRecipeCover" />

            <TextView
                android:id="@+id/tvRecipeName"
                style="@style/StyleFragmentHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_16dp"
                android:background="@drawable/shape_fragment_header"
                app:layout_constraintBottom_toBottomOf="@+id/ivRecipeCover"
                app:layout_constraintStart_toStartOf="@+id/ivRecipeCover"
                tools:text="@string/recipePageName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:orientation="vertical">

            <TextView
                style="@style/StyleFragmentHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="@dimen/_0dp"
                android:text="@string/Ingredients"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tvServingCount"
                style="@style/StyleServingsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_6dp"
                android:gravity="start"
                tools:text="@string/servingsCount" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:background="@drawable/shape_recipe_rv_bcg"
                android:paddingHorizontal="@dimen/_12dp"
                android:paddingVertical="@dimen/_4dp"
                android:stretchColumns="true"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_ingredient" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:orientation="vertical">

            <TextView
                style="@style/StyleFragmentHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="@dimen/_0dp"
                android:text="@string/cookingMethod" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:background="@drawable/shape_recipe_rv_bcg"
                android:paddingHorizontal="@dimen/_12dp"
                android:paddingVertical="@dimen/_4dp"
                android:stretchColumns="true"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_cooking_step" />
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>